Ajustes de CSS geral e listagem

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8">
   <title>Babytea</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@700&family=Merienda+One&display=swap"
+    rel="stylesheet">
 </head>
 <body>
   <bt-root></bt-root>
